gcc/testsuite/g++.old-deja/g++.other/const1.C
// { dg-do assemble  }

struct S
{
  void f()
    {
      const int i; // { dg-error "" } uninitialized const
    }
};
